change the layout code from static to dynamic using array of the editor function (issue: the alignment is not working yet) in the editor functions component

--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@
     }
     
     .functionalKeysContainer div {
-        @apply active:bg-slate-100 p-2 rounded-lg cursor-pointer;
+        @apply p-2 rounded-lg cursor-pointer;
     }
 
     .icons {
